--- a/ExpandTableViewWithObjC/Base.lproj/Main.storyboard
+++ b/ExpandTableViewWithObjC/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BrQ-iM-Zgv">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Objective-C-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
@@ -22,7 +22,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="haq-8a-rB9">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="6Ja-nt-bOD">
@@ -48,12 +48,131 @@
                             <constraint firstItem="haq-8a-rB9" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="yGy-Lp-WpJ"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Objective-C" image="ObjCImg" id="bDC-1B-B1b"/>
                     <connections>
                         <outlet property="tableView" destination="haq-8a-rB9" id="pgN-E9-t9r"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1020" y="139"/>
+        </scene>
+        <!--Swift-->
+        <scene sceneID="WVu-yo-PmV">
+            <objects>
+                <viewController id="y0A-R0-YDz" customClass="ViewControllerSwift" customModule="ExpandTableViewWithObjC" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="was-BP-NkT"/>
+                        <viewControllerLayoutGuide type="bottom" id="5UZ-Ac-SMm"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="EwI-Fo-2nX">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="4NY-Sw-yfT">
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="9bl-SL-msc">
+                                        <rect key="frame" x="0.0" y="56" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9bl-SL-msc" id="QhO-Qn-1Ka">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="HeaderCell" id="QER-mn-14O" customClass="CustomHeaderCell" customModule="ExpandTableViewWithObjC" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="100" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="QER-mn-14O" id="ZOn-3c-GkY">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UdW-VU-QZz" userLabel="btnSection">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="KuE-Qa-8w4" userLabel="labelSectiontitle">
+                                                    <rect key="frame" x="20" y="0.0" width="281" height="44"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="nJ7-Wf-Ayq" userLabel="labelExpand">
+                                                    <rect key="frame" x="301" y="0.0" width="44" height="44"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="44" id="OPQ-If-s5D"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <constraints>
+                                                <constraint firstItem="UdW-VU-QZz" firstAttribute="leading" secondItem="ZOn-3c-GkY" secondAttribute="leading" id="2sg-an-mOI"/>
+                                                <constraint firstItem="KuE-Qa-8w4" firstAttribute="leading" secondItem="ZOn-3c-GkY" secondAttribute="leading" constant="20" id="9UN-Mb-tMl"/>
+                                                <constraint firstAttribute="bottom" secondItem="KuE-Qa-8w4" secondAttribute="bottom" id="K8D-h3-K3j"/>
+                                                <constraint firstItem="UdW-VU-QZz" firstAttribute="top" secondItem="ZOn-3c-GkY" secondAttribute="top" id="Kfx-OI-peZ"/>
+                                                <constraint firstItem="KuE-Qa-8w4" firstAttribute="top" secondItem="ZOn-3c-GkY" secondAttribute="top" id="OJx-hQ-k8Q"/>
+                                                <constraint firstAttribute="bottom" secondItem="nJ7-Wf-Ayq" secondAttribute="bottom" id="Q4N-if-sVr"/>
+                                                <constraint firstAttribute="bottom" secondItem="UdW-VU-QZz" secondAttribute="bottom" id="U3Z-Rf-WbA"/>
+                                                <constraint firstItem="nJ7-Wf-Ayq" firstAttribute="top" secondItem="ZOn-3c-GkY" secondAttribute="top" id="jUs-qj-oPb"/>
+                                                <constraint firstAttribute="trailing" secondItem="UdW-VU-QZz" secondAttribute="trailing" id="p2e-FB-oPi"/>
+                                                <constraint firstItem="nJ7-Wf-Ayq" firstAttribute="leading" secondItem="KuE-Qa-8w4" secondAttribute="trailing" id="req-Yq-sll"/>
+                                                <constraint firstAttribute="trailing" secondItem="nJ7-Wf-Ayq" secondAttribute="trailing" constant="30" id="sl9-7Z-Mrv"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="btnSection" destination="UdW-VU-QZz" id="PeP-CZ-BYe"/>
+                                            <outlet property="labelExpand" destination="nJ7-Wf-Ayq" id="3uT-ar-nUb"/>
+                                            <outlet property="labelSectiontitle" destination="KuE-Qa-8w4" id="P6i-jk-bU3"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="y0A-R0-YDz" id="yZb-Q2-G7h"/>
+                                    <outlet property="delegate" destination="y0A-R0-YDz" id="ZBW-iW-MZa"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="4NY-Sw-yfT" firstAttribute="leading" secondItem="EwI-Fo-2nX" secondAttribute="leading" id="60o-vm-UTR"/>
+                            <constraint firstItem="4NY-Sw-yfT" firstAttribute="top" secondItem="was-BP-NkT" secondAttribute="bottom" id="RJO-eD-Lrk"/>
+                            <constraint firstItem="5UZ-Ac-SMm" firstAttribute="top" secondItem="4NY-Sw-yfT" secondAttribute="bottom" id="fT6-zP-6xa"/>
+                            <constraint firstAttribute="trailing" secondItem="4NY-Sw-yfT" secondAttribute="trailing" id="roy-iq-dya"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Swift" image="SwiftImg" id="kmP-Ua-O4A"/>
+                    <connections>
+                        <outlet property="tableView" destination="4NY-Sw-yfT" id="L2Q-jg-Ljt"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="T75-Qh-VnQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1020" y="900"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="epA-Pu-dqR">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="BrQ-iM-Zgv" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="Efd-D3-yiX">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="cma-5N-b6x"/>
+                        <segue destination="y0A-R0-YDz" kind="relationship" relationship="viewControllers" id="gKy-wt-nE2"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nUx-fZ-oys" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="168.80000000000001" y="138.98050974512745"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="ObjCImg" width="25" height="25"/>
+        <image name="SwiftImg" width="25" height="25"/>
+    </resources>
 </document>
